# spectral-scalpel

./: .gitignore  CITATION.cff  LICENSE  Manifest.toml  README.md  pyproject.toml
paper_toms/: STATUS.md  article.tex  cover_letter.tex  references.bib
reports/: paper2_novelty_and_venue.md  paper2_submission_plan.md  parallel_submission_analysis.md  phase0_logit_cascade_findings.md  phase0_logit_cascade_fkpp.py  phase0_logit_three_tests.py  phase0_logit_three_tests_findings.md  phase0_profile_sweep.py  phase0_tune_compare.py  phase0_tuner_validation.md  phase1a_tuner_rebuild.md  phase1a_validate_v2.py  phase1b_pencil_validation.md  phase1b_symbolic_derivations.md  phase1b_theory_exploration.md  phase1b_validate_pencil.py  phase1c_fkpp_failure_diagnosis.md  phase1c_open_questions.md  phase1c_reactive_genuine_novelty.md  phase1c_reactive_pde_via_splitting.md  phase1c_step2_cross_pde_summary.md  phase1c_theorem1_draft.md  phase1c_theorem1_proof.md  phase1c_theorem_generalization.md  phase1c_validate_allen_cahn.py  phase1c_validate_fkpp.py  phase1c_validate_ks.py  slope_sanity_checks.py  theorem1_2d_fkpp_validation.py  theorem1_eps_proof.md  theorem1_proof_v2.md  theorem1_unified_final.md  theorem1_unified_formal.md  theorem1_unified_validate.py  vector_cascade_validation.py  vector_theorem1_derivation.md
reproducibility/: Dockerfile  Dockerfile.codeocean  REPRODUCE.md  acm_artifact_checklist.md  reproduce.sh  requirements.codeocean.txt
scalpel/: __init__.py  api.py  chunked.py  config.py  diagnose.py  sweep.py  validate.py
scripts/: audit_figures.py  benchmark_all.py  (+30 more)
(+102 files in other folders)
